--- a/public/lobby/index.html
+++ b/public/lobby/index.html
@@ -2,23 +2,46 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="../stylesheets/lobby.css">
+  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
   <title>Lobby</title>
 </head>
 <body>
 <h1>LOBBY ROOM 1</h1>
 <h2>Waiting in lobby...</h2>
-<div>
-  <div>
-    <img src="../images/user.png" alt="User's avatar">
+<div class="user-container">
+  <div class="user">
+    <img src="../images/user.svg" alt="User's avatar">
     <h4>Go Junho</h4>
   </div>
-  <div>
-    <img src="../images/user.png" alt="User's avatar">
+  <div class="user">
+    <img src="../images/user.svg" alt="User's avatar">
     <h4>Han Sooyoung</h4>
   </div>
-  <div>
-    <img src="../images/user.png" alt="User's avatar">
+  <div class="user">
+    <img src="../images/user.svg" alt="User's avatar">
     <h4>Kieran White</h4>
+  </div>
+  <div class="user">
+    <img src="../images/user.svg" alt="User's avatar">
+    <h4>Go Junho</h4>
+  </div>
+  <div class="user">
+    <img src="../images/user.svg" alt="User's avatar">
+    <h4>Go Junho</h4>
+  </div>
+  <div class="user">
+    <img src="../images/user.svg" alt="User's avatar">
+    <h4>Go Junho</h4>
+  </div>
+  <div class="user">
+    <img src="../images/user.svg" alt="User's avatar">
+    <h4>Go Junho</h4>
+  </div>
+  <div class="user">
+    <img src="../images/user.svg" alt="User's avatar">
+    <h4>Go Junho</h4>
   </div>
 </div>
 </body>
