Added and styled buttons

--- a/public/lobby/index.html
+++ b/public/lobby/index.html
@@ -10,6 +10,7 @@
 <body>
 <h1>LOBBY ROOM 1</h1>
 <h2>Waiting in lobby...</h2>
+
 <div class="user-container">
   <div class="user">
     <img src="../images/user.svg" alt="User's avatar">
@@ -43,6 +44,11 @@
     <img src="../images/user.svg" alt="User's avatar">
     <h4>Go Junho</h4>
   </div>
+</div>
+
+<div class="buttons">
+  <a href="../index.html"><button class="leave-btn">LEAVE ROOM</button></a>
+  <button class="start-btn">START GAME</button>
 </div>
 </body>
 </html>
