--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <script src="/socket.io/socket.io.js"></script>
-    <title>Scribble It</title>
+    <title>Kuri Drawing</title>
     <link
       rel="apple-touch-icon"
       sizes="180x180"
@@ -68,13 +68,13 @@
       </div>
       <div class="wrapper_item" id="sidebar_left">
         <div class="textbox">
-          <h2>Welcome to Kuri Ice Draw</h2>
+          <h2>Welcome to Kuri Drawing</h2>
           <p>
             Here you can enter one of the available room from the list, or
             create a new one!
           </p>
           <p>
-            Scribble it is a real-time draw-and-guess game with simple rules!
+            Kuri Drawing based on a real-time draw-and-guess game Scribble it!
           </p>
           <ul>
             <li>One player tries to draw an image of something</li>
