succesfully navigate between buttons

--- a/public/lobby/index.html
+++ b/public/lobby/index.html
@@ -1,54 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../stylesheets/lobby.css">
-  <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
-  <title>Lobby</title>
-</head>
-<body>
-<h1>LOBBY ROOM 1</h1>
-<h2>Waiting in lobby...</h2>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../stylesheets/lobby.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Montserrat"
+      rel="stylesheet"
+    />
+    <title>Lobby</title>
+  </head>
+  <body>
+    <h1>LOBBY ROOM 1</h1>
+    <h2>Waiting in lobby...</h2>
 
-<div class="user-container">
-  <div class="user">
-    <img src="../images/user.svg" alt="User's avatar">
-    <h4>Go Junho</h4>
-  </div>
-  <div class="user">
-    <img src="../images/user.svg" alt="User's avatar">
-    <h4>Han Sooyoung</h4>
-  </div>
-  <div class="user">
-    <img src="../images/user.svg" alt="User's avatar">
-    <h4>Kieran White</h4>
-  </div>
-  <div class="user">
-    <img src="../images/user.svg" alt="User's avatar">
-    <h4>Go Junho</h4>
-  </div>
-  <div class="user">
-    <img src="../images/user.svg" alt="User's avatar">
-    <h4>Go Junho</h4>
-  </div>
-  <div class="user">
-    <img src="../images/user.svg" alt="User's avatar">
-    <h4>Go Junho</h4>
-  </div>
-  <div class="user">
-    <img src="../images/user.svg" alt="User's avatar">
-    <h4>Go Junho</h4>
-  </div>
-  <div class="user">
-    <img src="../images/user.svg" alt="User's avatar">
-    <h4>Go Junho</h4>
-  </div>
-</div>
+    <div class="user-container">
+      <div class="user">
+        <img src="../images/user.svg" alt="User's avatar" />
+        <h4>Go Junho</h4>
+      </div>
+      <div class="user">
+        <img src="../images/user.svg" alt="User's avatar" />
+        <h4>Han Sooyoung</h4>
+      </div>
+      <div class="user">
+        <img src="../images/user.svg" alt="User's avatar" />
+        <h4>Kieran White</h4>
+      </div>
+      <div class="user">
+        <img src="../images/user.svg" alt="User's avatar" />
+        <h4>Go Junho</h4>
+      </div>
+      <div class="user">
+        <img src="../images/user.svg" alt="User's avatar" />
+        <h4>Go Junho</h4>
+      </div>
+      <div class="user">
+        <img src="../images/user.svg" alt="User's avatar" />
+        <h4>Go Junho</h4>
+      </div>
+      <div class="user">
+        <img src="../images/user.svg" alt="User's avatar" />
+        <h4>Go Junho</h4>
+      </div>
+      <div class="user">
+        <img src="../images/user.svg" alt="User's avatar" />
+        <h4>Go Junho</h4>
+      </div>
+    </div>
 
-<div class="buttons">
-  <a href="../index.html"><button class="leave-btn">LEAVE ROOM</button></a>
-  <button class="start-btn">START GAME</button>
-</div>
-</body>
+    <div class="buttons">
+      <a href="../index.html"><button class="leave-btn">LEAVE ROOM</button></a>
+      <button
+        type="button"
+        class="start-btn"
+        id="start_button"
+        name="button"
+        onclick="startRoom()"
+      >
+        START GAME
+      </button>
+    </div>
+    <script src="/js/index.js"></script>
+  </body>
 </html>
