--- a/public/index.html
+++ b/public/index.html
@@ -41,6 +41,30 @@
   </head>
 
   <body>
+  <div class="wrapper_item" id="introduction">
+    <div class="textbox">
+      <h2>Welcome to Kuri Drawing</h2>
+      <p>
+        Create a new room or join a room below to enjoy our bonding game and have a fun time
+        with your colleagues!
+      </p>
+      <p>
+        Kuri Drawing based on a real-time draw-and-guess game Scribble it!
+      </p>
+      <ul>
+        <li>One player tries to draw an image of a word related to our company</li>
+        <li>Other players guess the word and type it out</li>
+        <li>
+          A new word will be chosen when the time runs out for each round, so no
+          points will be given after this period
+        </li>
+        <li>
+          The minimum number of players in a room should be four
+        </li>
+      </ul>
+    </div>
+  </div>
+  
     <div class="wrapper">
       <div class="wrapper_item" id="main">
         <div class="textbox" id="middle">
@@ -66,30 +90,7 @@
           Join
         </button>
       </div>
-      <div class="wrapper_item" id="sidebar_left">
-        <div class="textbox">
-          <h2>Welcome to Kuri Drawing</h2>
-          <p>
-            Here you can enter one of the available room from the list, or
-            create a new one!
-          </p>
-          <p>
-            Kuri Drawing based on a real-time draw-and-guess game Scribble it!
-          </p>
-          <ul>
-            <li>One player tries to draw an image of something</li>
-            <li>The others try to guess what it is</li>
-            <li>
-              If time runs out, a new drawer is randomly chosen and no point are
-              awarded
-            </li>
-            <li>
-              Please play with minimum 3 players, Otherwise it will end up in
-              tie
-            </li>
-          </ul>
-        </div>
-      </div>
+      
       <div class="wrapper_item" id="sidebar_right">
         <div class="textbox">
           <p>Create a room!</p>
