--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
   <body>
   <div class="wrapper_item" id="introduction">
     <div class="textbox">
-      <h2>Welcome to Kuri Drawing</h2>
+      <h2>WELCOME TO KURI DRAWING</h2>
       <p>
         Create a new room or join a room below to enjoy our bonding game and have a fun time
         with your colleagues!
