--- a/public/lobby/index.html
+++ b/public/lobby/index.html
@@ -8,9 +8,16 @@
       href="https://fonts.googleapis.com/css?family=Montserrat"
       rel="stylesheet"
     />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon.ico">
+    <link rel="manifest" href="/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/favicon/favicon.ico" color="#5bbad5">
+    <link rel="shortcut icon" href="/favicon/favicon.ico">
     <title>Lobby</title>
   </head>
   <body>
+  <div style="background-color: #eff4fb; width: 80%; margin: auto; border-radius: 75px">
     <h1>LOBBY ROOM 1</h1>
     <h2>Waiting in lobby...</h2>
 
@@ -61,6 +68,8 @@
         START GAME
       </button>
     </div>
-    <script src="/js/index.js"></script>
+  </div>
+
+  <script src="/js/index.js"></script>
   </body>
 </html>
