--- a/public/playground/index.html
+++ b/public/playground/index.html
@@ -8,14 +8,14 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Scribble it</title>
+  <title>Kuri</title>
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/favicon.ico">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon.ico">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon.ico">
   <link rel="manifest" href="/favicon/site.webmanifest">
-  <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="mask-icon" href="/favicon/favicon.ico" color="#5bbad5">
   <link rel="shortcut icon" href="/favicon/favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta name="msapplication-TileColor" content="#2d89ef">
@@ -55,7 +55,7 @@
       <input autofocus type="text" id="input_text">
       <button class="generic_button" id="send" type="button" onclick="send()">Send</button>
     </div>
-    <div class="wrapper_item textbox chat">
+    <div class="wrapper_item textbox chat" id="right_text">
       <div id="opaque_gradient"></div>
       <div id="chat_text"></div>
     </div>
