--- a/public/lobby/index.html
+++ b/public/lobby/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../stylesheets/lobby.css" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="stylesheet" href="../stylesheets/lobby.css"/>
     <link
-      href="https://fonts.googleapis.com/css?family=Montserrat"
-      rel="stylesheet"
+            href="https://fonts.googleapis.com/css?family=Montserrat"
+            rel="stylesheet"
     />
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/favicon.ico">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon.ico">
@@ -15,61 +15,63 @@
     <link rel="mask-icon" href="/favicon/favicon.ico" color="#5bbad5">
     <link rel="shortcut icon" href="/favicon/favicon.ico">
     <title>Lobby</title>
-  </head>
-  <body>
-  <div style="background-color: #eff4fb; width: 80%; margin: auto; border-radius: 75px">
+</head>
+<body>
+<div style="background-color: #eff4fb; width: 80%; margin: auto; border-radius: 75px">
     <h1>LOBBY ROOM 1</h1>
     <h2>Waiting in lobby...</h2>
 
     <div class="user-container">
-      <div class="user">
-        <img src="../images/user.svg" alt="User's avatar" />
-        <h4>Go Junho</h4>
-      </div>
-      <div class="user">
-        <img src="../images/user.svg" alt="User's avatar" />
-        <h4>Han Sooyoung</h4>
-      </div>
-      <div class="user">
-        <img src="../images/user.svg" alt="User's avatar" />
-        <h4>Kieran White</h4>
-      </div>
-      <div class="user">
-        <img src="../images/user.svg" alt="User's avatar" />
-        <h4>Go Junho</h4>
-      </div>
-      <div class="user">
-        <img src="../images/user.svg" alt="User's avatar" />
-        <h4>Go Junho</h4>
-      </div>
-      <div class="user">
-        <img src="../images/user.svg" alt="User's avatar" />
-        <h4>Go Junho</h4>
-      </div>
-      <div class="user">
-        <img src="../images/user.svg" alt="User's avatar" />
-        <h4>Go Junho</h4>
-      </div>
-      <div class="user">
-        <img src="../images/user.svg" alt="User's avatar" />
-        <h4>Go Junho</h4>
-      </div>
+        <div class="user">
+            <img src="../images/user.svg" alt="User's avatar"/>
+            <h4>Go Junho</h4>
+        </div>
+        <div class="user">
+            <img src="../images/user.svg" alt="User's avatar"/>
+            <h4>Han Sooyoung</h4>
+        </div>
+        <div class="user">
+            <img src="../images/user.svg" alt="User's avatar"/>
+            <h4>Kieran White</h4>
+        </div>
+        <div class="user">
+            <img src="../images/user.svg" alt="User's avatar"/>
+            <h4>Go Junho</h4>
+        </div>
+        <div class="user">
+            <img src="../images/user.svg" alt="User's avatar"/>
+            <h4>Go Junho</h4>
+        </div>
+        <div class="user">
+            <img src="../images/user.svg" alt="User's avatar"/>
+            <h4>Go Junho</h4>
+        </div>
+        <div class="user">
+            <img src="../images/user.svg" alt="User's avatar"/>
+            <h4>Go Junho</h4>
+        </div>
+        <div class="user">
+            <img src="../images/user.svg" alt="User's avatar"/>
+            <h4>Go Junho</h4>
+        </div>
     </div>
 
     <div class="buttons">
-      <a href="../index.html"><button class="leave-btn">LEAVE ROOM</button></a>
-      <button
-        type="button"
-        class="start-btn"
-        id="start_button"
-        name="button"
-        onclick="startRoom()"
-      >
-        START GAME
-      </button>
+        <a href="../index.html">
+            <button class="leave-btn">LEAVE ROOM</button>
+        </a>
+        <button
+                type="button"
+                class="start-btn"
+                id="start_button"
+                name="button"
+                onclick="startRoom()"
+        >
+            START GAME
+        </button>
     </div>
-  </div>
+</div>
 
-  <script src="/js/index.js"></script>
-  </body>
+<script src="/js/index.js"></script>
+</body>
 </html>
